# rez-packages

boost/1.55.0/: CMakeLists.txt  package.py
clang/9.1.0/: package.py
eigen/3.3.7/: CMakeLists.txt  package.py
flann/1.9.1/: CMakeLists.txt  package.py
ilmbase/2.2.0/: CMakeLists.txt  package.py
libjpeg/9c/: CMakeLists.txt  package.py
opencolorio/1.0.9/: CMakeLists.txt  package.py
openexr/2.2.0/: CMakeLists.txt  package.py
openimageio/2.0.7/: CMakeLists.txt  package.py
os/osx-10.13.4/: package.py
pcl/1.9.1/: CMakeLists.txt  package.py
platform/osx/: package.py
ptex/2.1.28/: CMakeLists.txt  package.py
python/2.7.10/: package.py
python/2.7.5/: package.py
vtk/8.2.0/: CMakeLists.txt  package.py
